nav-bar formatting

--- a/public/welcomePage.html
+++ b/public/welcomePage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/theme-colors.css">
-    <link rel="stylesheet" href="./css/foundation-css.css">
+    <link rel="stylesheet" href="./css/resetting.css">
     <link rel="stylesheet" href="./css/nav-bar.css">
     <title>Bukovel. Welcome to the Heart of Carpathians</title>
 
@@ -23,12 +23,17 @@
                 <ul>
                     <li>
                         <a href="#">
-                            Trails map
+                            <p>Map of trails</p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            Skipasses and equipment
+                            <p>Skipasses and equipment</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>Contact and access</p>
                         </a>
                     </li>
                     <li>
@@ -65,12 +70,17 @@
                 <ul>
                     <li>
                         <a href="#">
-                            Trails map
+                            <p>Map of trails</p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            Skipasses and equipment
+                            <p>Skipasses and equipment</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>Contact and access</p>
                         </a>
                     </li>
                     <li>
